# quadctrl

./: .gitignore  CMakeLists.txt  Makefile  README.md
android/: .gitignore
android/app/: build.gradle
android/app/src/main/java/me/denniss/quadctrl/: ControlNode.java  MainActivity.java  Quadcopter.java  SettingsFragment.java
android/app/src/main/jni/: Android.mk  inertial.cpp  inertial.h  log.h  motors.cpp  motors.h  node.cpp  quadcopter.cpp  quadcopter.h  usb_serial.cpp  usb_serial.h
android/app/src/main/res/layout/: activity_main.xml  drawer_main.xml
android/app/src/main/res/menu/: global.xml
android/app/src/main/res/xml/: device_filter.xml
android/ext/libftdi/: ftdi_version_i.h
android/ext/libusb/: Android.mk
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/me/denniss/quadctrl/: ControlNode.java  MainActivity.java  NavigationDrawerFragment.java  SettingsFragment.java
app/src/main/java/me/denniss/quadnode/: ControlNode.java  Listener.java  MainActivity.java  Quadcopter.java  SettingsFragment.java
app/src/main/jni/: Android.mk  MadgwickAHRS.cpp  MadgwickAHRS.h  inertial.cpp  inertial.h  log.h  motors.cpp  motors.h  node.cpp  node.h  quadcopter.cpp  quadcopter.h  usb_serial.cpp  usb_serial.h
app/src/main/res/layout/: activity_main.xml  fragment_settings.xml
app/src/main/res/values/: strings.xml  styles.xml
arduino/: README.md  arduino.ino  board.brd  board.sch
cmake/: FindEigen3.cmake  teensy.toolchain.cmake
ext/: .gitignore
ext/libftdi/: Android.mk  ftdi.c  ftdi.h
ext/libusb/: core.c
scripts/: keyboard_ctrl.py  visualize.py
src/: MadgwickAHRS.cpp  attitude_ctrl.cpp  attitude_ctrl.h  controller.h  main.cpp  model.cpp  model.h  packet.h  pid.h  position_ctrl.cpp  position_ctrl.h  rsim.cpp  simrun.cpp  simulate.cpp  simulate.h
src/creator/: CMakeLists.txt  PoseWindow.cpp  PoseWindow.h  QTOgreWindow.cpp  SdkQtCameraMan.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  net.cpp  net.h
src/drivers/: CMakeLists.txt
src/drivers/optitrack/: test.cpp
src/drivers/optitrack/natnet/: ClientCore.cpp  ClientCore.h  NatNetClient.cpp
src/onboard/: CMakeLists.txt  main.cpp  motors.cpp  mpu.cpp  net.cpp  onboard.h
